added token column + token calculation
